owncloud/owncloud-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: owncloud-service
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: owncloud
